@startuml
title Class Diagram

package Database <<Database>> {
  class Winehouse{
    -bottles : ArrayList<Bottle>
    -users : ArrayList<Person>
    -orders : ArrayList<Order>
    +void registration()
    +void addBottle()
    +void addOrder()
    +void deleteOrder()
    +void updateBottle()
    +void checkAvailability()
    +void searchWine()
    +void buyWine()
    +void outofstockWarning()
    +void sendNotification()
    +void cleanOrders()
  }
}
Winehouse "0 .. 1" *-- "0 .. *" Order
Winehouse "0 .. 1" *-- "0 .. *" Person
Winehouse "0 .. 1" *-- "0 .. *" Bottle

class Person {
    __ private data __
    -name : String
    -surname : String
    -username : String
    -password : String
    -- crypted --
    -hashed_password : String
}

class Client {
    -logged : boolean
    -purchases : ArrayList<Bottle>
    +void registration()
    +void login()
    +void searchWine()
    +void buyWine()
    +void askNotification()
}

Client -- Wine

class Admin {
    +void deleteOrder()
    +void refillOrder()
    +void shipOrder()
}

Admin -up- Order

Person <|-up- Client : <<Inheritance>>
Person <|-left- Admin : <<Inheritance>>

class Wine {
    -name : String
    -year : Integer
    -notes : String
    -vineyards : ArrayList<String>
}

class Bottle {
    -wine : Wine
    -bottleAmount : Integer
}

Bottle "*" *-up- "1" Wine : contains

class Order {
    -buyer : Client
    -orderBottle : Bottle
    -trackingNumber : String
    -processed : boolean
    -notification : boolean
    -shipped : boolean
}

Order "*" o-left- "1" Bottle : contains
Order "*" o-right- "1" Client : contains
@enduml